--- a/T7-bootstrap-sass-master/aula-2/index.html
+++ b/T7-bootstrap-sass-master/aula-2/index.html
@@ -4,11 +4,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Roberta Cintra - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+<!-- css -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
 
+<!-- nav -->
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+    <a class="navbar-brand text-light h3-title" href="#">Roberta Cintra</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto font-weight-bold">
+        <a class="nav-item nav-link active text-light" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-light" href="#">Services</a>
+        <a class="nav-item nav-link text-light" href="#">Portfolio</a>
+        <a class="nav-item nav-link text-light" href="#">About</a>
+        <a class="nav-item nav-link text-light" href="#">Contact</a>
+        </div>
+    </div>
+</nav>
+
+<!-- carousel -->
+<header>
+<div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./assets/images/03-full.jpg" class="d-block w-100 h-75" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            <h3 class="h3-title">Welcome to my Portfolio!</h3>
+            <h1 class="text-uppercase">It's nice to meet you.</h1>
+            <button class="btn btn-warning text-uppercase">Tell me more</button>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/header-bg.jpg" class="d-block w-100 h-75" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            <h3 class="h3-title">Take a look at my past works!</h3>
+            <h1 class="text-uppercase">Check the projects I've developed.</h1>
+            <button class="btn btn-warning text-uppercase">Show me more</button>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/images/04-full.jpg" class="d-block w-100 h-75" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+            <h3 class="h3-title">Hire me!</h3>
+            <h1 class="text-uppercase">Or just say hello.</h1>
+            <button class="btn btn-warning text-uppercase">Let's chat!</button>
+            </div>
+        </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+</header>
+
+<!-- container -->
+<section class="pt-5 pb-5">
+<div class="container col-sm-9 text-center">
+    <h1 class="h3-title">Services</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+</div>
+
+<div class="card-group container">
+    <div class="card text-center">
+        <img class="rounded-circle " src="./assets/images/02-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+    </div>
+    <div class="card text-center">
+        <img class="rounded-circle" src="./assets/images/03-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+    </div>
+    <div class="card text-center">
+        <img class="rounded-circle" src="./assets/images/06-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+    </div>
+</div>
+
+
+</section>
+
+<section class="bg-light pt-5 pb-5">
+
+    <div class="card-group container">
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/02-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/03-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/06-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+</div>
+<div class="card-group container">
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/02-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/03-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="card-img-top" src="./assets/images/06-thumbnail.jpg" alt="Card image cap">
+        <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+</div>
+
+</section>
+
+<!-- contact -->
+<section class="bg-dark pt-5 pb-5">
+<div class="container">
+    <form>
+    <div class="form-group">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="your email: name@example.com">
+    </div>
+
+    <div class="form-group">
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="your message"></textarea>
+    </div>
+</form>
+</div>
+</section>
+
+<!-- js -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
