--- a/T7-bootstrap-sass-master/aula-2/index.html
+++ b/T7-bootstrap-sass-master/aula-2/index.html
@@ -181,6 +181,15 @@
 </div>
 </section>
 
+<!-- footer -->
+<footer class="footer-copyright text-center py-3">
+    <p>copyright Roberta Cintra</p>
+    <a href="">Github</a>
+    <a href="">linkedIn</a>
+    <p>deservolvido por Roberta Cintra</p>
+</footer>
+
+
 <!-- js -->
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
