--- a/T7-bootstrap-sass-master/aula-4/index.html
+++ b/T7-bootstrap-sass-master/aula-4/index.html
@@ -12,11 +12,10 @@
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
 
-        <link href="assets/css/bootstrap.css" rel="stylesheet" />
-
     </head>
     <body class="landing-page">
-        <nav class="navbar navbar-transparent navbar-top" role="navigation">
+<!-- header start -->
+        <nav class="navbar" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -63,6 +62,7 @@
                 <!-- /.navbar-collapse -->
             </div>
         </nav>
+<!--header end -->
         <div class="wrapper">
             <div class="parallax filter-gradient blue" data-color="blue">
                 <div class="parallax-background">
@@ -254,6 +254,4 @@
         </div>
 
     </body>
-    <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap.js" type="text/javascript"></script>
 </html>
