--- a/T7-bootstrap-sass-master/aula-4/index.html
+++ b/T7-bootstrap-sass-master/aula-4/index.html
@@ -11,6 +11,7 @@
         <!--     Fonts and icons     -->
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="./styles/style.css">
 
     </head>
     <body class="landing-page">
@@ -62,7 +63,7 @@
                 <!-- /.navbar-collapse -->
             </div>
         </nav>
-<!--header end -->
+<!-- header end -->
         <div class="wrapper">
             <div class="parallax filter-gradient blue" data-color="blue">
                 <div class="parallax-background">
