--- a/T7-bootstrap-sass-master/aula-4/index.html
+++ b/T7-bootstrap-sass-master/aula-4/index.html
@@ -20,6 +20,10 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
+                    
+                    <h1>Texto com SASS</h1>
+                    <button class="botaoX">Aprendendo Sass</button>
+
                     <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar bar1"></span>
