--- a/sass/institucional/index.html
+++ b/sass/institucional/index.html
@@ -16,6 +16,7 @@
 
 
     </head>
+    
     <body class="landing-page">
         <!-- inicio header -->
         <nav class="navbar header">
@@ -109,6 +110,7 @@
                     </div>
                 </div>
             </div>
+            <!-- start Presentation -->
             <div class="section-presentation">
                 <div class="container">
                     <div class="row">
@@ -126,6 +128,7 @@
                     </div>
                 </div>
             </div>
+            <!-- start Features -->
             <div class="section-features">
                 <div class="container">
                     <h4 class="header-text text-center">Features</h4>
@@ -162,6 +165,7 @@
                     </div>
                 </div>
             </div>
+            <!-- footer -->
             <footer class="footer">
                 <div class="container">
                     <nav class="pull-left">
