--- a/js-iv/class/index.html
+++ b/js-iv/class/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Botões</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/34b5435fec.js"></script>
 </head>
 <body>
     <div id="buttons-section"></div>
